crates/ruff/src/rules/pyflakes/snapshots/ruff__rules__pyflakes__tests__F811_F811_8.py.snap
---
source: crates/ruff/src/rules/pyflakes/mod.rs
---
./resources/test/fixtures/pyflakes/F811_8.py:5:12: F811 Redefinition of unused `os` from line 4
  |
5 | try:
6 |     import os
7 |     import os
  |            ^^ F811
8 | except:
9 |     pass
  |


