crates/ruff/src/rules/pyflakes/snapshots/ruff__rules__pyflakes__tests__F821_F821_11.py.snap
---
source: crates/ruff/src/rules/pyflakes/mod.rs
---
./resources/test/fixtures/pyflakes/F821_11.py:18:28: F821 Undefined name `os`
   |
18 | def f(x: Callable[[VarArg("os")], None]):  # F821
   |                            ^^ F821
19 |     pass
   |

./resources/test/fixtures/pyflakes/F821_11.py:23:14: F821 Undefined name `Baz`
   |
23 | f(Callable[["Bar"], None])
24 | f(Callable[["Baz"], None])
   |              ^^^ F821
   |


