crates/ruff/src/rules/pyflakes/snapshots/ruff__rules__pyflakes__tests__F821_F821_12.py.snap
---
source: crates/ruff/src/rules/pyflakes/mod.rs
expression: diagnostics
---
- kind:
    name: UndefinedName
    body: "Undefined name `os`"
    commit: ~
    fixable: false
  location:
    row: 20
    column: 26
  end_location:
    row: 20
    column: 30
  fix: ~
  parent: ~
- kind:
    name: UndefinedName
    body: "Undefined name `Baz`"
    commit: ~
    fixable: false
  location:
    row: 25
    column: 12
  end_location:
    row: 25
    column: 17
  fix: ~
  parent: ~

