crates/ruff/src/rules/pyflakes/snapshots/ruff__rules__pyflakes__tests__F821_F821_13.py.snap
---
source: crates/ruff/src/rules/pyflakes/mod.rs
---
./resources/test/fixtures/pyflakes/F821_13.py:8:19: F821 Undefined name `List`
   |
 8 | Y: ForwardRef("List[int]")
 9 | 
10 | Z = TypeVar("X", "List[int]", "int")
   |                   ^^^^ F821
   |


