crates/ruff/src/rules/pyflakes/snapshots/ruff__rules__pyflakes__tests__F821_F821_3.py.snap
---
source: crates/ruff/src/rules/pyflakes/mod.rs
expression: diagnostics
---
- kind:
    name: UndefinedName
    body: "Undefined name `key`"
    commit: ~
    fixable: false
  location:
    row: 11
    column: 8
  end_location:
    row: 11
    column: 13
  fix: ~
  parent: ~
- kind:
    name: UndefinedName
    body: "Undefined name `value`"
    commit: ~
    fixable: false
  location:
    row: 11
    column: 15
  end_location:
    row: 11
    column: 22
  fix: ~
  parent: ~

