crates/ruff/src/rules/pyflakes/snapshots/ruff__rules__pyflakes__tests__F821_F821_5.py.snap
---
source: crates/ruff/src/rules/pyflakes/mod.rs
expression: diagnostics
---
- kind:
    name: UndefinedName
    body: "Undefined name `InnerClass`"
    commit: ~
    fixable: false
  location:
    row: 5
    column: 29
  end_location:
    row: 5
    column: 41
  fix: ~
  parent: ~

