crates/ruff/src/rules/pyflakes/snapshots/ruff__rules__pyflakes__tests__F821_F821_9.py.snap
---
source: crates/ruff/src/rules/pyflakes/mod.rs
expression: diagnostics
---
- kind:
    UndefinedName:
      name: make
  location:
    row: 18
    column: 18
  end_location:
    row: 18
    column: 22
  fix: ~
  parent: ~
- kind:
    UndefinedName:
      name: model
  location:
    row: 18
    column: 24
  end_location:
    row: 18
    column: 29
  fix: ~
  parent: ~
- kind:
    UndefinedName:
      name: captured
  location:
    row: 26
    column: 19
  end_location:
    row: 26
    column: 27
  fix: ~
  parent: ~

